welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: error: identifier expected but '(' found.
      setCouleurBrosse(T.(k)
                         ^Array1:25: error: ')' expected but '}' found.
    }
    ^